--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                 <div class="steps-container">
                     <div class="step-card scroll-animate-left">
                         <div class="step-number">01</div>
-                        <h3>Pilih Editor Kode</h3>
-                        <p>Pilih text editor untuk menulis kode seperti Visual Studio Code, Notepad++, atau Sublime Text. Editor ini memiliki fitur syntax highlighting yang memudahkan proses coding.</p>
+                        <h3>Pilih Software Code </h3>
+                        <p>Pilih Software untuk menulis kode seperti Visual Studio Code, Notepad++, atau Sublime Text. Editor ini memiliki fitur syntax highlighting yang memudahkan proses coding.</p>
                     </div>
                     
                     <div class="step-card scroll-animate-left delay-1-left">
@@ -213,3 +213,4 @@
     </div>
 </body>
 </html>
+
